--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -10,6 +10,14 @@
   font-size: 14px;
   color: black;
 }
+.navbar {
+  width: 100%;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  position: fixed !important;
+  z-index: 1000;
+  background-color: #fff; /* Adjust the value as needed */
+}
+
 .nav-link {
   color: black !important;
   font-weight: 600 !important;
@@ -31,7 +39,8 @@
 .Hero-para {
   color: black;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 38px;
+  font-size: 22px;
+  padding-bottom: 2rem;
 }
 .Hero-btn {
   background-color: black;
@@ -71,11 +80,311 @@
 .card.active {
   transform: translateX(0); /* Slide the active card from left to right */
   background-color: #3498db; /* Change the background color for the active card */
-  color: #ffffff; /* Change the text color for the active card */
+  color: #ffffff;
+  overflow: hidden; /* Change the text color for the active card */
 }
-
+.hero-section {
+  width: 100%;
+  height: 100%;
+  background-image: url(../assets/Website\ picture.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 .card:not(.active) {
   transform: translateX(
     -100%
   ); /* Hide non-active cards by sliding them off the left side */
+}
+.slick-slide {
+  display: flex; /* Ensure the images are in a row */
+  justify-content: center; /* Center-align the images horizontally */
+  align-items: center; /* Center-align the images vertically */
+}
+.slide {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.LOGO-01 {
+  max-width: 100px;
+  max-height: 100px;
+}
+
+.about-us {
+  background-color: #df2921;
+}
+.about-head {
+  color: #df2921;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  padding-bottom: 3rem;
+}
+.card-01 {
+  background-color: #fff;
+  padding: 2rem;
+}
+.vision-head {
+  color: #df2921;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  padding-bottom: 3rem;
+}
+.train-head {
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 35px;
+  font-weight: 900;
+}
+.our-client {
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 35px;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+.training-para {
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+}
+.Main-card {
+  padding: 20px;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+.mangement-head {
+  color: red;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+}
+.manage--89 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
+}
+.contact-sec {
+  background-color: #df2921;
+  padding: 1rem;
+}
+.contact-0001 {
+  background-color: #fff;
+  padding: 20px;
+}
+label {
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 19px;
+}
+.btn-send-Message {
+  background-color: black !important;
+  width: 140px !important;
+  height: 40px !important;
+  outline: none;
+  border: none;
+}
+.partner-head {
+  color: #fff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 900;
+}
+.partner-head span {
+  border-bottom: 6px solid #df2921;
+}
+li {
+  list-style: none;
+}
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 2rem;
+}
+.bi {
+  font-size: 25px;
+}
+.Footer-links {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  text-decoration: none;
+  color: #fff;
+}
+.Footer-links:hover {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  text-decoration: none;
+  color: #df2921;
+}
+.let-Connect {
+  font-size: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  margin-left: 20px;
+  color: #df2921;
+  padding-bottom: 2rem;
+}
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+
+  height: 650px;
+  background-color: red;
+}
+.prohead {
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  font-size: 45px;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+.prohead span {
+  border-bottom: 6px solid #df2921;
+}
+.our-client span {
+  border-bottom: 6px solid #df2921;
+}
+.HEad-para-main {
+  color: red;
+  font-weight: 600;
+  font-size: 35px;
+}
+.partner-logo {
+  width: 140px;
+}
+.Join {
+  color: #df2921;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+@media only screen and (max-width: 600px) {
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+
+    height: 100%;
+    background-color: red;
+  }
+  .prohead {
+    color: black;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    font-size: 35px;
+    text-transform: uppercase;
+  }
+  .HEad-para-main {
+    color: red;
+    font-weight: 600;
+    font-size: 22px;
+    padding: 1rem;
+    text-align: center;
+  }
+  .partner-logo {
+    width: 140px;
+  }
+  .Hero-para {
+    color: black;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+  }
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+
+    max-height: 420px;
+    background-color: red;
+  }
+  .Ser-01-heading {
+    color: #fff;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 45px !important;
+  }
+}
+
+/* Services PAge */
+.ser-main-01- {
+  width: 100%;
+  height: 100%;
+  background-image: url(../assets/Website\ picture.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 12rem;
+}
+.Ser-01-heading {
+  color: #fff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 65px;
+}
+.ser-p-head-0 {
+  color: red;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 26px;
+  padding-top: 1rem;
+}
+.ser-para01 {
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  padding-bottom: 1rem;
+}
+.buy-now-btn {
+  background-color: black !important;
+  color: #ffff !important;
+  font-size: 14px !important;
+}
+.buy-now-btn:focus {
+  background-color: rgb(255, 0, 0) !important;
+  color: #ffff !important;
+  font-size: 14px !important;
+  outline: black;
+}
+.ser-main-card {
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  padding-bottom: 1rem;
 }
